--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ section {
 .experience-details-container {
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  /* flex-direction: column; */
 }
 
 .article-container {
