--- a/style.css
+++ b/style.css
@@ -366,6 +366,9 @@ article .icon {
 #projects {
   position: relative;
 }
+#projects1 {
+  position: relative;
+}
 
 .about-two {
   margin-top: 1rem;
@@ -723,6 +726,9 @@ body.dark-mode {
 #experience.dark-mode p {
   color: white;
 }
+#experience.dark-mode .ex {
+  color: rgb(85, 85, 85);
+}
 
 #experience.dark-mode .icon {
   color: #ffff94;
@@ -733,6 +739,7 @@ body.dark-mode {
   text-shadow: 0 0 5px #ffff94, 0 0 7px #f9db5c, 0 0 8px #f9db5c;
   transition: all 0.6s;
 }
+
 
 #projects.dark-mode .title {
   color: white;
@@ -766,6 +773,40 @@ body.dark-mode {
   text-shadow: 0 0 5px #ffff94, 0 0 7px #f9db5c, 0 0 8px #f9db5c;
   transition: all 0.6s;
 }
+
+#projects1.dark-mode .title {
+  color: white;
+  transition: all 0.6s;
+}
+#projects1.dark-mode .details-container {
+  background-color: rgb(53, 53, 53);
+  color: white;
+  border-color: #ffff94;
+  box-shadow: 0 0 5px #ffff94, 0 0 7px #f9db5c, 0 0 8px #f9db5c;
+}
+#projects1.dark-mode .project-title {
+  color: white;
+}
+#projects1.dark-mode .btn {
+  background-color: black;
+  color: white;
+  border-color: black;
+}
+#projects1.dark-mode .btn:hover {
+  background-color: rgb(53, 53, 53);
+  transition: all 0.6s;
+  border-color: white;
+}
+#projects1.dark-mode .icon {
+  color: #ffff94;
+  transition: all 0.6s;
+}
+#projects1.dark-mode .icon:hover {
+  color: #ffff94;
+  text-shadow: 0 0 5px #ffff94, 0 0 7px #f9db5c, 0 0 8px #f9db5c;
+  transition: all 0.6s;
+}
+
 
 #contact.dark-mode .title {
   color: white;
