--- a/mediaquires.css
+++ b/mediaquires.css
@@ -61,6 +61,29 @@
       transform: rotate(0deg);
     }
   }
+
+  #projects .capa{
+    border-radius: 15px;
+    position: absolute;
+    height: auto;
+    width: 100;
+    min-width: 245px;
+    max-width: 250px;
+    min-height: 235px;
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: all 0.5s ease-out;
+    opacity: 0;
+    padding:0.5rem;
+    text-align: justify;
+    visibility: hidden;
+    
+  }
+
+  #projects .article-container:hover > .capa{
+    opacity: 1;
+    visibility: visible;
+  
+  }
 }
 
 @media screen and (max-width: 1200px) {
@@ -163,6 +186,30 @@
   #projects .arrow {
     display: none;
   }
+  #projects1 .arrow {
+    display: none;
+  }
+
+
+  #projects .capa{
+    border-radius: 15px;
+    position: absolute;
+    height: auto;
+    width: auto;
+    max-width: 300px;
+    min-height: 300px;
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: all 0.5s ease-out;
+    opacity: 0;
+    padding:0.5rem;
+    visibility: hidden;
+  }
+
+  #projects .article-container:hover > .capa{
+    opacity: 1;
+    visibility: visible;
+  
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -250,4 +297,25 @@
   #projects1 .arrow {
     display: none;
   }
+
+
+  #projects .capa{
+    border-radius: 15px;
+    position: absolute;
+    height: auto;
+    width: auto;
+    max-width: 315px;
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: all 0.5s ease-out;
+    opacity: 0;
+    padding:0.5rem;
+    visibility: hidden;
+  }
+  
+  #projects .article-container:hover > .capa{
+    opacity: 1;
+    visibility: visible;
+  
+  }
+
 }
