--- a/style.css
+++ b/style.css
@@ -272,6 +272,10 @@ section {
 #about {
   position: relative;
 }
+#about .about-text {
+  text-align: justify;
+  font-size: 0.92rem;
+}
 
 .about-containers {
   gap: 2rem;
@@ -339,7 +343,6 @@ section {
 #experience .icon-MySQL {
   height: 2.5rem;
 }
-
 
 .experience-details-container {
   display: flex;
@@ -440,11 +443,10 @@ article .icon {
   height: 2.5rem;
 }
 
-.mobile{
+.mobile {
   font-size: 2rem;
   margin: 0.5rem;
 }
-
 
 #contact .contact-info-container p {
   color: black;
@@ -668,14 +670,11 @@ body.dark-mode {
   transition: all 0.6s;
   border-color: #c4ffff;
   box-shadow: 0 0 5px #3b8eed, 0 0 5px #3b8eed, 0 0 8px #3b8eed;
- 
- 
 }
 #profile.dark-mode .btn-color-1:hover {
   border-color: #ffff94;
   box-shadow: 0 0 5px #ffff94, 0 0 5px #f9db5c, 0 0 8px #f9db5c;
   transition: all 0.6s;
- 
 }
 
 #profile.dark-mode #social-container .world a {
@@ -692,13 +691,12 @@ body.dark-mode {
     2px 2px 15px #137fc7;
 }
 
-
 /* About section */
 #about.dark-mode .title {
   color: white;
   transition: all 0.6s;
 }
-#about.dark-mode .about-pic{
+#about.dark-mode .about-pic {
   background-color: #c4ffff;
   box-shadow: 0 0 5px #3b8eed, 0 0 15px #3b8eed, 0 0 20px #3b8eed;
 }
@@ -725,18 +723,20 @@ body.dark-mode {
 #about.dark-mode .ban2 {
   color: white;
 }
+#about.dark-mode .about-text {
+  color: white;
+}
 
 #experience.dark-mode .title {
   color: white;
   transition: all 0.6s;
 }
 #experience.dark-mode .details-container {
- /*  background-color: rgb(53, 53, 53); */
+  /*  background-color: rgb(53, 53, 53); */
   background-color: #000;
   color: white;
   box-shadow: 0 0 5px #ffff94, 0 0 7px #f9db5c, 0 0 8px #f9db5c;
 }
-
 
 #experience.dark-mode .experience-sub-title {
   color: white;
@@ -764,8 +764,6 @@ body.dark-mode {
 #experience.dark-mode .dj-icon {
   filter: brightness(0) invert(1);
 }
-
-
 
 #projects.dark-mode .title {
   color: white;
@@ -833,7 +831,6 @@ body.dark-mode {
   transition: all 0.6s;
 }
 
-
 #contact.dark-mode .title {
   color: white;
   transition: all 0.6s;
@@ -847,7 +844,7 @@ body.dark-mode {
 #contact.dark-mode .mobile {
   color: white;
 }
-#contact.dark-mode .number{
+#contact.dark-mode .number {
   color: white;
 }
 
@@ -870,30 +867,24 @@ body.dark-mode {
   text-decoration-color: #137fc7;
 }
 
-
 /* Details cards section */
 
-
-
-#projects .capa p{
+#projects .capa p {
   color: white;
   margin-top: -2rem;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
 }
-#projects .capa h3{
+#projects .capa h3 {
   color: white;
   font-size: 1rem;
- 
 }
 
-
-#projects1 .capa p{
+#projects1 .capa p {
   color: white;
   margin-top: -2rem;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
 }
-#projects1 .capa h3{
+#projects1 .capa h3 {
   color: white;
   font-size: 1rem;
- 
 }
