--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ article .icon {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  height: 70vh;
+  /* height: 70vh; */
 }
 
 .contact-info-upper-container {
@@ -425,6 +425,8 @@ article .icon {
   border-color: rgb(163, 163, 163);
   background: (250, 250, 250);
   margin: 2rem auto;
+  
+  
 }
 
 .contact-info-container {
