--- a/mediaquires.css
+++ b/mediaquires.css
@@ -285,6 +285,9 @@
     color: white;
     font-size: 1rem;
   }
+  #projects1 .back{
+    display: none;
+  }
 
   
 }
@@ -434,6 +437,10 @@
   #projects1 .capa h3 {
     color: white;
     font-size: 1rem;
+  }
+
+  #projects1 .back{
+    display: none;
   }
  
 }
