--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@ section {
   height: 400px;
   width: 400px;
   margin: auto 0;
+  
 }
 
 .section__text {
@@ -329,6 +330,8 @@ section {
   width: 400px;
   margin: auto 0;
   border-radius: 50%;
+/*   border: 1px solid #1c1c1c; */
+ 
 }
 
 /* Experience secion. */
@@ -666,6 +669,7 @@ body.dark-mode {
   color: white;
   transition: all 0.6s;
 }
+
 #profile.dark-mode .btn-color-2 {
   background-color: black;
   color: white;
